--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
                         <div class="card-item">
                             <h3 class="team-title">Mark Guerrero</h3>
                             <p class="team-subtitle subtitle ">Product Designer</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item"><a href="" class="team-social-link link"><svg
+                                            class="team-social-icon">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
+                                            <use></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
+                                            <use></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
+                                            <use></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item"><img src="./images/person2.jpg" alt="person2" width="264" height="260">
