--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
                 <h2 class="visually-hidden">Advantages</h2>
                 <ul class="about-list list">
                     <li class="about-item">
+                        <div class="icon-about"><svg class="icon-about-item" width="64" height="64">
+                                <use href="./images/symbol-about-defs.svg#icon-antenna-1"></use>
+                            </svg></div>
                         <h3 class="about-title">Strategy</h3>
                         <p class="about-subtitle">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="about-item">
+                        <div class="icon-about"><svg class="icon-about-item">
+                                <use href="./images/symbol-about-defs.svg#icon-clock-1"></use>
+                            </svg></div>
                         <h3 class="about-title">Punctuality</h3>
                         <p class="about-subtitle">Bring the key message to the brand's audience for the best price
                             within
@@ -73,12 +79,18 @@
                             time.</p>
                     </li>
                     <li class="about-item">
+                        <div class="icon-about"><svg class="icon-about-item">
+                                <use href="./images/symbol-about-defs.svg#icon-diagram-1"></use>
+                            </svg></div>
                         <h3 class="about-title">Diligence</h3>
                         <p class="about-subtitle">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="about-item">
+                        <div class="icon-about"><svg class="icon-about-item">
+                                <use href="./images/symbol-about-defs.svg#icon-astronaut-1"></use>
+                            </svg></div>
                         <h3 class="about-title">Technologies</h3>
                         <p class="about-subtitle">Design practice focused on digital experiences. We bring forth a deep
                             passion for
@@ -116,18 +128,21 @@
                             <h3 class="team-title">Mark Guerrero</h3>
                             <p class="team-subtitle subtitle ">Product Designer</p>
                             <ul class="team-social-list list">
-                                <li class="team-social-item"><a href="" class="team-social-link link"><svg
-                                            class="team-social-icon">
-                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                <li class="team-social-item"><a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg> </a></li>
-                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
-                                            <use></use>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg> </a></li>
-                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
-                                            <use></use>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg> </a></li>
-                                <li class="team-social-item"><a href="" class="team-social-link"><svg>
-                                            <use></use>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg> </a></li>
                             </ul>
                         </div>
@@ -136,18 +151,72 @@
                         <div class="card-item">
                             <h3 class="team-title">Tom Ford</h3>
                             <p class="team-subtitle">Frontend Developer</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item"><a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item"><img src="./images/person3.jpg" alt="person3" width="264" height="260">
                         <div class="card-item">
                             <h3 class="team-title">Camila Garcia</h3>
                             <p class="team-subtitle">Marketing</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item"><a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item"><img src="./images/person4.jpg" alt="person4" width="264" height="260">
                         <div class="card-item">
                             <h3 class="team-title">Daniel Wilson</h3>
                             <p class="team-subtitle">UI Designer</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item"><a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="team-social-item"><a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -155,17 +224,71 @@
         </section>
         <!-- /Team section -->
 
+        <!-- Customers -->
+
+        <section class="customers-section">
+            <div class="container">
+                <h2 class="customers-title">Customers</h2>
+                <ul class="customers-item list">
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo1"></use>
+                            </svg></a></li>
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo2"></use>
+                            </svg></a></li>
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo3"></use>
+                            </svg></a></li>
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo4"></use>
+                            </svg></a></li>
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo5"></use>
+                            </svg></a></li>
+                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                                <use href="./images/symbol-customers-defs.svg#icon-logo6"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+
+        </section>
+
     </main>
     <!-- Footer section -->
     <footer class="footer-section">
         <div class="container">
-            <a href="./index.html" class="main-footer-logo"><span class="logo-acsent">Web</span><span
-                    class="logo-footer">Studio</span></a>
+            <ul class="footer-description">
 
-            <p class="footer-subtitle">Increase the flow of customers and sales for your business with digital
-                marketing
-                &
-                growth solutions.</p>
+                <li><a href="./index.html" class="main-footer-logo"><span class="logo-acsent">Web</span><span
+                            class="logo-footer">Studio</span></a>
+
+                    <p class="footer-subtitle">Increase the flow of customers and sales for your business with digital
+                        marketing
+                        &
+                        growth solutions.</p>
+                </li>
+                <li>
+                    <p class="footer-social-subtitle">Social media</p>
+                    <ul class="footer-social-list list">
+                        <li class="footer-social-item"><a href="" class="footer-social-link link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </footer>
     <!-- /Footer section -->
