--- a/portfolio.html
+++ b/portfolio.html
@@ -157,13 +157,38 @@
     <!-- Footer section -->
     <footer class="footer-section">
         <div class="container">
-            <a href="./index.html" class="main-footer-logo"><span class="logo-acsent">Web</span><span
-                    class="logo-footer">Studio</span></a>
+            <ul class="footer-description">
 
-            <p class="footer-subtitle">Increase the flow of customers and sales for your business with digital
-                marketing
-                &
-                growth solutions.</p>
+                <li><a href="./index.html" class="main-footer-logo"><span class="logo-acsent">Web</span><span
+                            class="logo-footer">Studio</span></a>
+
+                    <p class="footer-subtitle">Increase the flow of customers and sales for your business with digital
+                        marketing
+                        &
+                        growth solutions.</p>
+                </li>
+                <li>
+                    <p class="footer-social-subtitle">Social media</p>
+                    <ul class="footer-social-list list">
+                        <li class="footer-social-item"><a href="" class="footer-social-link link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a></li>
+                        <li class="footer-social-item"><a href="" class="footer-social-link">
+                                <svg class="footer-social-icon" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </footer>
     <!-- /Footer section -->
