--- a/index.html
+++ b/index.html
@@ -229,23 +229,29 @@
         <section class="customers-section">
             <div class="container">
                 <h2 class="customers-title">Customers</h2>
-                <ul class="customers-item list">
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                <ul class="customers-list list">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo1"></use>
                             </svg></a></li>
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo2"></use>
                             </svg></a></li>
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo3"></use>
                             </svg></a></li>
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo4"></use>
                             </svg></a></li>
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo5"></use>
                             </svg></a></li>
-                    <li class="customers-list"><a href="" class="customers-link"><svg class="customers-icon">
+                    <li class="customers-item"><a href="" class="customers-link"><svg class="customers-icon" with="104"
+                                height="56">
                                 <use href="./images/symbol-customers-defs.svg#icon-logo6"></use>
                             </svg></a></li>
                 </ul>
