Fixed hero button, customers icon, presentation - hov/foc,

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <div class="container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
-                <button type="button" class="hero-button"><a href="" class="button-text">Order Service</a></button>
+                <button type="button" class="hero-button"><a href="" class="hero-link" width="169" height="56">
+                        <p class="hero-subtitle">Service</p>
+                    </a></button>
             </div>
         </section>
 
